--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <dt>{title}</dt>
                     <dd>{staffPosition}</dd>
                     <dd><a href="mailto:{staffEmail}">{staffEmail}</a></dd>
-                    <dd><a href="tel:+1 {staffPhone}">{staffPhone}</a></dd>
+                    {!-- <dd><a href="tel:+1 {staffPhone}">{staffPhone}</a></dd> --}
 
             {/exp:weblog:entries}
 
@@ -56,9 +56,12 @@
                     </dd>
                 <dt>Pastoral Relations Committee</dt>
                     <dd>
-                        The Pastoral Relations Committee counsels Pastor Scott,
+                        The Pastoral Relations Committee counsels Pastor Scott
                         and works to ensure that he is receiving the support he needs
                         to be able to effectively pastor the congregation.
+                        This committee also evaluates Pastor Scott’s work,
+                        reflecting on behalf of the congregation about
+                        how his ministry is being received.
                         You can contact the committee chairperson, Ariana D’Angelo, at
                         <a href="mailto:ariana@artisanchurch.com">ariana@artisanchurch.com</a>.
                     </dd>
