--- a/liturgy.html
+++ b/liturgy.html
@@ -36,7 +36,8 @@
 
                 <dt>Sending Forth</dt>
                     <dd>Closing congregational songs</dd>
-                    <dd>Offering/announcements/blessing</dd>
+                    <dd>Offering</dd>
+                    <dd>Announcements and blessing</dd>
 
             </dl>
 
