--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="feature-primary-copy-bg">
                         <header>
                             <h3 class="feature-slug">Current Series</h3>
-                            <a class="feature-primary-title" href="{url_title}">
+                            <a class="feature-primary-title" href="/series/{url_title}">
                                 <h1>{title}</h1>
                             </a>
                             {if SeriesSubtitle}<h2>{SeriesSubtitle}</h2>{/if}
