--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 {embed="v3/_header" sec_slug="about"}
 
     <main class="main inside" id="main" role="main">
+      <div class="wrapper">
 
         <section class="content">
 
@@ -90,6 +91,7 @@
 
         {embed="v3/_sidebar-about" page_slug="mission-values"}
 
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="about"}
