--- a/_page-top.html
+++ b/_page-top.html
@@ -17,16 +17,13 @@
     <script type="text/javascript" src="//use.typekit.net/tki3phj.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+    <!-- Style -->
     <link rel="stylesheet" href="/static/css/main.min.css">
 
+    <!-- Script -->
     <script src="/static/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body{if embed:sec_slug} class="{embed:sec_slug}"{/if}{if embed:page_slug} id="{embed:page_slug}"{/if}>
-
-<!--[if lte IE 8]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser.
-    Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
 
     <a href="#main" class="skip">Skip to content</a>
