Bring back (revised) history copy; add wrapper

--- a/our-name.html
+++ b/our-name.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="about"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Why “Artisan” Church?</h1>
@@ -37,11 +37,29 @@
                 world. You’re welcome to join us on that journey!
             </p>
 
+            <h2>A bit of history</h2>
+
+            <p>
+                Artisan Church had its start in 2005, when two church planting teams came together
+                to form one church. These teams, known as Capax Dei Church and Quest Covenant Church,
+                had strikingly similar visions, yet each also had something unique to offer, not only
+                in its gifts and talents, but also in the core communities it served.
+            </p>
+
+            <p>
+                So throughout 2005, Artisan Church was successfully launched and experienced steady
+                growth, both in the depth of lives changed, and in the breadth of many new people
+                finding a place of welcome. With this growth has come wonderful opportunities, real
+                challenges, and even greater responsibility to truly make a difference in people’s
+                lives, our city, and the world. We’re humbled by what God is doing in and through his
+                people at Artisan. We’d love to have you come explore and be part of the adventure!
+            </p>
+
         </section>
 
-       {embed="v3/_sidebar-about" page_slug="our-name"}
-
-   </main>
+        {embed="v3/_sidebar-about" page_slug="our-name"}
+      </div>
+    </main>
 
 {embed="v3/_footer" sec_slug="about"}
 
