See core affirmations only on Mission/Values page

--- a/_sidebar-about.html
+++ b/_sidebar-about.html
@@ -20,6 +20,7 @@
                 </ul>
             </nav>
 
+        {if embed:page_slug == 'mission-values'}
             <section class="sidebar-content">
                 <h1>Core Affirmations</h1>
                 <p>
@@ -46,7 +47,7 @@
                 <h4>Related links:</h4>
                 <ul>
                     <li>
-                        <a href="http://www.covchurch.org">Evangelical Covenant Church website</a>
+                        <a href="http://www.covchurch.org">Evangelical Covenant Church</a>
                     </li>
                     <li>
                         ECC –
@@ -58,5 +59,6 @@
                     </li>
                 </ul>
             </section>
+        {/if}
 
         </aside>
