Add wrapper to Worship section

--- a/liturgy.html
+++ b/liturgy.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="worship"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Liturgy</h1>
@@ -20,6 +20,7 @@
 
             <p>Here is an example of how that pattern might be applied at Artisan:</p>
 
+            {!-- TODO: turn into proper ordered list --}
             <dl>
                 <dt>Gathering</dt>
                     <dd>Call to worship: a reading from Scripture or the early church</dd>
@@ -49,7 +50,7 @@
         </section>
 
         {embed="v3/_sidebar-worship" page_slug="liturgy"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="worship"}
