--- a/worship.html
+++ b/worship.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="worship"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Worship</h1>
@@ -46,7 +46,7 @@
         </section>
 
         {embed="v3/_sidebar-worship" page_slug="worship"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="worship"}
