Update childrens ministry copy; add wrappers

--- a/children.html
+++ b/children.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="children"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Children & Families</h1>
@@ -22,14 +22,13 @@
             </p>
 
             <h2>
-                Seedlings (Birth – 24 months)
+                Seedlings (Infants)
             </h2>
 
             <p>
-                For our littlest ones, we have a “baby care” room located across from the sanctuary.
-                Parents are welcome to stay and care for their babies in a room suited just for
-                them or can leave them with our wonderful volunteers, most of whom are parents,
-                during the sermon time.
+                We have an infant care room available for parents to use,
+                and volunteers we call "Baby Holders" who would be happy to
+                care for your infant during the sermon time of our service!
             </p>
 
             <p>
@@ -45,52 +44,27 @@
             </p>
 
             <h2>
-                Sprouts (2 & 3 year olds)
+                Sprouts (Toddlers)
             </h2>
 
             <p>
-                The Sprouts meet at the end of our children’s ministry hall in the “green room.”
-                They use  curriculum that is designed just for their age and stage
-                and are led by wonderful, caring teachers and helpers.
-                Each week they sing, play, color, and hear short interactive stories
-                as they get acquainted with the Bible!
+                Our toddlers have a special class of their own, with caring volunteers
+                who explore a Bible story with them and spend lots of time playing together!
             </p>
 
             <h2>
-                Buds (3 & 4 year olds)
+                The Garden (Pre-K – 3rd Grade)
             </h2>
 
             <p>
-                The Bud class gathers in the “large room” in our kids wing, along with the Bloom class,
-                to participate in a fun group music experience to start off our time together.
-            </p>
-
-            <p>
-                Then, we close the divider in the classroom and the Buds,
-                led by a caring teacher and adult helper, explore stories in the Bible.
-                We use the Jesus Storybook Bible and engage with scripture through music, play, and art.
-            </p>
-
-            <h2>
-                Blooms (K–3rd Grade)
-            </h2>
-
-            <p>
-                The Bloom class gathers in the “large room” in our kids wing, along with the Bud class,
-                to participate in a fun group music experience to start off our time together.
-            </p>
-
-            <p>
-                Then, we close the divider in the classroom and the Blooms,
-                led by an experienced teacher, explore stories in the Bible.
-                We use the Jesus Storybook Bible and engage with scripture
-                through music, play, drama, and art.
+                In the Garden, kids explore a different Bible story each month through a variety of workshops.
+                Each week they engage in the story through art, science, music, cooking, film, and more!
             </p>
 
         </section>
 
         {embed="v3/_sidebar-children" page_slug="children"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="children"}
