--- a/moms.html
+++ b/moms.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="children"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Artisan Moms Group</h1>
@@ -31,7 +31,7 @@
          </section>
 
         {embed="v3/_sidebar-children" page_slug="moms"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="children"}
