--- a/preteens.html
+++ b/preteens.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="children"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Roots Preteen Ministry <small>4th–7th grade</small></h1>
@@ -27,7 +27,7 @@
         </section>
 
         {embed="v3/_sidebar-children" page_slug="preteens"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="children"}
