Update groups section

--- a/_sidebar-groups.html
+++ b/_sidebar-groups.html
@@ -8,8 +8,8 @@
                     <li class="mission-values{if embed:page_slug == 'groups'} current{/if}">
                         <a href="/groups/">Overview</a>
                     </li>
-                    <li class="staff{if embed:page_slug == 'home-groups'} current{/if}">
-                        <a href="/home-groups/">Home Groups</a>
+                    <li class="staff{if embed:page_slug == 'greenhouses'} current{/if}">
+                        <a href="/greenhouses/">Greenhouses</a>
                     </li>
                     <li class="name{if embed:page_slug == 'connection-groups'} current{/if}">
                         <a href="/connection-groups/">Connection Groups</a>
