--- a/connection-groups.html
+++ b/connection-groups.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="groups"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Connection Groups</h1>
@@ -27,16 +27,22 @@
                 7:00 pm ’til we’re done; BYO snacks to share.
             </p>
 
-            <h2>Fourth Friday Movie Night</h2>
+            <h2>Men’s Group</h2>
             <!-- <img class="connection-group-img"
                  src=""
                  alt=""> -->
             <p class="h4 connection-group-schedule">
-                Fourth Friday of each month, 7:00 pm
+                Once a month; day and location varies
             </p>
             <p>
-                Movies describe the whole range of the human experience and so we gather to join in.
-                Sign up to share a favorite movie for everyone to enjoy together.
+                The men of Artisan church get together once a month for fun and fellowship.
+                Current and past activities include playing lawn games, visiting breweries, bowling,
+                and watching movies together.
+            </p>
+
+            <p>
+                Join our <a href="https://www.facebook.com/groups/172090406151107/">Facebook group</a>
+                to be kept abreast of upcoming men’s events!
             </p>
 
             {!-- <h2>Past groups</h2> --}
@@ -44,7 +50,7 @@
         </section>
 
         {embed="v3/_sidebar-groups" page_slug="connection-groups"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="groups"}
