--- a/groups.html
+++ b/groups.html
@@ -1,16 +1,16 @@
 {embed="v3/_page-top"
  title="Groups: Overview"
- desc="An overview of how we approach our ministry."
+ desc="Gathering together outside of the Sunday worship service."
  page_slug="groups"
  sec_slug="groups"}
 
 {embed="v3/_header" sec_slug="groups"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
-            <h1>Groups Overview</h1>
+            <h1>Groups at Artisan</h1>
 
             <p>
                 Groups are a setting where we can work together to live out
@@ -20,7 +20,7 @@
 
             <ul>
                 <li>
-                    Our <a href="/home-groups/">home groups</a> are our most common type of groups.
+                    <a href="/greenhouses/">Greenhouses</a> are our most common type of groups.
                     They tend to be ongoing groups where people get to know each other more deeply
                     through sharing, prayer, and reading the Bible together.
                 </li>
@@ -40,7 +40,7 @@
         </section>
 
         {embed="v3/_sidebar-groups" page_slug="groups"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="groups"}
