--- a/study-groups.html
+++ b/study-groups.html
@@ -7,15 +7,13 @@
 {embed="v3/_header" sec_slug="groups"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Study Groups</h1>
 
             <p>
-                <i>
-                    There are no active study groups, at the moment.
-                </i>
+                <i>There are no active study groups at the moment.</i>
             </p>
 
             <p>
@@ -28,7 +26,7 @@
         </section>
 
         {embed="v3/_sidebar-groups" page_slug="study-groups"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="groups"}
