--- a/liturgy.html
+++ b/liturgy.html
@@ -1,5 +1,5 @@
 {embed="v3/_page-top"
- title="Liturgy"
+ title="Worship: Liturgy"
  desc="An overview of how we approach worship through our liturgy."
  page_slug="liturgy"
  sec_slug="worship"}
