--- a/_sidebar-children.html
+++ b/_sidebar-children.html
@@ -5,7 +5,7 @@
 
             <nav class="nav-inside">
                 <ul>
-                    <li class="overview{if embed:page_slug == 'overview'} current{/if}">
+                    <li class="overview{if embed:page_slug == 'children'} current{/if}">
                         <a href="/children/">Overview</a>
                     </li>
                     <li class="moms{if embed:page_slug == 'moms'} current{/if}">
