--- a/full-calendar.html
+++ b/full-calendar.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="events"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Full Calendar of Events</h1>
@@ -28,7 +28,7 @@
         </section>
 
         {embed="v3/_sidebar-events" page_slug="full-calendar"}
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="events"}
