--- a/children.html
+++ b/children.html
@@ -40,7 +40,7 @@
 
             <p>
                 Don’t forget – children of all ages (and nursing moms!)
-                are always welcome in the sanctuary, as well!
+                are always welcome in the sanctuary!
             </p>
 
             <h2>
