--- a/directions.html
+++ b/directions.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="directions"}
 
     <main class="main full-width" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Directions</h1>
@@ -27,7 +27,7 @@
             </div>
 
         </section>
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="directions"}
