--- a/liturgy.html
+++ b/liturgy.html
@@ -30,6 +30,7 @@
                     <dd>Congregational prayers</dd>
 
                 <dt>Word</dt>
+                    <dd>Scripture readings</dd>
                     <dd>Sermon</dd>
 
                 <dt>Table</dt>
