--- a/podcast.html
+++ b/podcast.html
@@ -7,7 +7,7 @@
 {embed="v3/_header" sec_slug="podcast"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Subscribe to Our Podcast</h1>
@@ -68,7 +68,7 @@
             </section>
 
         </aside>
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="podcast"}
