--- a/preteens.html
+++ b/preteens.html
@@ -14,14 +14,14 @@
 
             <p>
                 Our preteen group, led by Jessie, gets together twice per month
-                following the worship service twice per month to
-                build relationships and explore faith in Christ.
+                following the worship service to build relationships
+                and explore faith in Christ.
             </p>
 
             <p>
                 The preteens also participate in several service projects and
                 fun activities throughout the year!
-                For more info, <a href="/staff/">contact Jessie</a>!
+                For more info, <a href="/staff/">contact Jessie</a>.
             </p>
 
         </section>
