--- a/worship.html
+++ b/worship.html
@@ -40,7 +40,7 @@
                 During the sermon, we offer wonderful
                 <a href="/children/">age-appropriate ministry for children ages 0–9</a>.
                 Parents and caregivers are always welcome to keep their children
-                with them in our sanctuary for the entire service, if they prefer.
+                with them in our sanctuary for the entire service if they prefer.
             </p>
 
         </section>
